# Mul-C-Builder

./: .gitignore  README.md  compile.bat  compile.sh  mulC  mulC.py  scheme.json
src/: BuildInfo.h  BuildMode.h  Builder.cpp  Builder.h  CLIOptions.cpp  CLIOptions.h  CMakeLists.txt  SystemInterface.cpp  SystemInterface.h  build_info.h  general.h  jsonUtils.h  main.cpp  utils.h
test_app/: test_app.mulc.json  test_app.mulc.py
test_app/src/: main.cpp
test_app/src/src_nested/: blabla.cpp
test_app/src_bla/: bla.cpp
